--- a/demos/reactMobx/tsconfig.json
+++ b/demos/reactMobx/tsconfig.json
@@ -10,7 +10,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "typeRoots": [
+       "node_modules/@types",
+     ],
   },
   "include": [
     "./src/**/*"
