--- a/demos/reactMobx/package.json
+++ b/demos/reactMobx/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/pro-components": "^2.4.16",
     "@babel/core": "^7.21.8",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
