--- a/demos/reactumi/package.json
+++ b/demos/reactumi/package.json
@@ -23,9 +23,14 @@
     "@ant-design/icons": "^5.1.0",
     "@ant-design/pro-components": "^2.4.16",
     "@ant-design/pro-layout": "^6.5.0",
+    "@emotion/css": "^11.11.0",
+    "@types/react-resizable": "^3.0.4",
     "antd": "^5.5.0",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-draggable": "^4.4.5",
+    "react-modal-resizable-draggable": "^0.1.6",
+    "react-resizable": "^3.0.5",
     "umi": "^3.5.40"
   },
   "devDependencies": {
