--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
-.history
+# 忽略node_modules目录，因为通常不需要将依赖库上传到版本控制系统
+node_modules/
+
+# 忽略构建生成的文件和目录
+build/
+dist/
+*.log
+
+# 忽略编辑器生成的文件
+.vscode/
+.idea/
+*.iml
+
+# 忽略本地配置文件
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 忽略npm的debug.log文件
+npm-debug.log*
+
+# 忽略Yarn的debug.log文件
+yarn-debug.log*
+yarn-error.log*
+
+# 忽略Mac系统生成的.DS_Store文件
+.DS_Store
+
+# 忽略Windows系统生成的Thumbs.db文件
+Thumbs.db
